--- a/english/word/low-frequency/043-048.md
+++ b/english/word/low-frequency/043-048.md
@@ -19,49 +19,51 @@
 
 ## 043
 
-- utopia
+- utopia [juːˈtoʊpiə]
     - n. 乌托邦
-- deprivation
+- deprivation [ˌdɛprəˈveʃən]
     - n. 缺少
     - Millions more suffer from serious sleep **deprivation** caused by long work hours.
-- athletic
+- athletic [æθˈletɪk]
     - adj. 体育运动的
+    - athlete [ˈæθliːt] n. 运动员；体育家
 - unfunded
     - adj. 没有经费的
-- abstractly
+- abstractly ['æbstræktlɪ]
     - adv. 抽象地
-- casualness
+- casualness [ˈkæʒəwəlnɛs]
     - n. 漫不经心
     - She introduced herself with studied **casualness**. 她故作轻松的做了个自我介绍。
         - studied adj. 刻意的；装模作样的
         - studied casualness 故作轻松
-    - casual adj. 随意的
-- causality
+    - casual [ˈkæʒuəl] adj. 随意的
+- causality [kɔˈzælɪti]
     - n. 因果关系
     - This does not prove **causality**.
     - cause v. 导致
-- correspondent
+- correspondent [ˌkɔːrəˈspɑːndənt]
     - n. 通讯员
-- bait
+- bait [beɪt]
     - vt. 下诱饵
 - displeasure
     - n. 不悦
 
 ## 044
 
-- compulsory
+- compulsory [kəmˈpʌlsəri]
     - adj. 强制的
-- coherence
+- coherence [koʊˈhɪrəns]
     - n. 一致性
-- despise
+- despise [dɪˈspaɪz]
     - vt. 鄙视
     - I **despise** such people: they've no character.
-- timber
+- timber [ˈtɪmbər]
     - n. 木材
 - offset
     - vt. 抵消
     - The moderation in food prices helped to **offset** the first increase in energy prices.
-- inventory
+        - moderation n. 适度; 自我节制; 稳定，镇定
+- inventory [ˈɪnvəntɔːri]
     - n. 存货
 - layout
     - n. 版面设计
@@ -70,31 +72,34 @@
     - objective
         - n. 目标
         - adj. 客观的
-- triviality
+- triviality [ˌtrɪviˈælɪti]
     - n. 琐事
     - trivial [ˈtrɪviəl] adj. 不重要的，琐碎的
-- extinct
+- extinct [ɪkˈstɪŋkt]
     - adj. 灭绝的
     - endangered adj. （物种）濒危的
 
 ## 045
 
-- inconceivable
+- inconceivable [ˌɪnkənˈsiːvəbl]
     - adj. 不可思议的
-- marital
+- marital [ˈmærɪtl]
     - adj. 婚姻的
-- affiliated
+- affiliated [əˈfɪlieɪtɪd]
     - adj. 隶属的；附属的
     - ...worried that the cable and phone companies selling broadband connections had the power and incentive to favor
       **affiliated** websites over their rivals'.
         - favor A over B 更偏向 A，而不是 B/更青睐 A 胜过 B
         - rival [ˈraɪvl] n. 竞争对手
+        - cable n. 有线电视
+        - broadband n. 宽带连接
+        - incentive n. 动机；激励
     - affiliation n. 附属机构
-- gossip
+- gossip [ˈɡɑːsɪp]
     - n. 闲言碎语
-- deputy
+- deputy [ˈdepjuti]
     - n. 副手
-- drain
+- drain [dreɪn]
     - n. 外流
     - This "<ins>brain **drain**(人才流失)</ins>" has long bothered policymakers in poor countries.
 - mispredict
@@ -108,9 +113,9 @@
 
 - outlook
     - n. 看法
-- intriguing
+- intriguing [ɪnˈtriːɡɪŋ]
     - adj. （由于奇特、神秘或出人意料而）非常有趣的
-- rein
+- rein [reɪn]
     - vi. 严加控制
 - rap
     - n. 评价
@@ -119,8 +124,8 @@
     - duplication n. （不必要的）重复
 - hardship
     - n. 艰苦
-    - == suffering
-- plague
+    - == suffering n. 痛苦; 受苦
+- plague [pleɪɡ]
     - vt. 困扰
 - oppressive
     - adj. 令人窒息的
@@ -128,27 +133,28 @@
 
 ## 047
 
-- readable
+- readable [ˈridəbəl]
     - adj. 通俗易懂的
 - execution
     - n. （正式）实施
-- mayoral
+- mayoral ['meərəl]
     - adj. 市长的
 - seal
     - vt. 盖章；密封
     - n. 印章；封条
     - Herewith we are sending you a written contract under **seal** in two copies.
-    - I looked upon the gift as a **seal** on our friendship.
+    - I looked upon the gift as a **seal** on our friendship. 把这份礼物看作是我们友谊的象征
+        - look upon A as B 把 A 看作 B
 - convict
     - vt. 宣判...有罪
 - diversify
     - v. 使多样化
-- pensioner
+- pensioner [ˈpenʃənər]
     - n. 领取养老金的人
 - specialize
     - vi. 专门研究（或从事）
-    - speciality n. 专长
     - specialization n. 专门化
+    - speciality [ˌspɛʃiˈælɪti] n. 专长
 
 ## 048
 
@@ -156,19 +162,19 @@
     - adj. 完全相同的
     - == the same
     - The two pictures are similar, although not **identical**.
-- omission
+- omission [oˈmɪʃən]
     - n. 疏忽
 - vocal
     - adj. 大声表达的
-- soften
+- soften [ˈsɔfn]
     - v. 使缓和
     - Airbags are designed to **soften** the impact of a car crash.
 - deletion
     - n. 删除
-- contingent
+- contingent [kənˈtɪndʒənt]
     - adj. 依情况而定的
     - == dependent adj. 依赖的；取决于...的
-    - Uh, what if we say it's **contingent**?
+    - Uh, what if we say it's **contingent**? 呃，那要不我们就说这是‘有条件的 / 取决于情况的’？
 - spite
     - n. 恶意
     - in spite of 尽管
@@ -176,7 +182,7 @@
     - She did it <ins>out of spite(出于恶意)</ins>.
 - corruptive
     - adj. 腐败的
-- seminar
+- seminar [ˈsemɪnɑːr]
     - n. 研讨会
 - termination
     - n. 终止
