--- a/english/word/low-frequency/049-054.md
+++ b/english/word/low-frequency/049-054.md
@@ -21,34 +21,39 @@
 
 - rationally
     - adv. 理性地
+    - irrational adj. 非理性的
     - rationalization
         - n. 合理化
+        - exploitation [ˌɛksplɔɪˈteʃən] n. 剥削；开发
         - a rationalization of exploitation 对剥削的合理化
-- biographer
+- biographer [baɪˈɑːɡrəfər]
     - n. 传记作家
 - temper
     - vt. 使缓和
     - n. 性情，脾气
     - **Temper** can also be used as a verb meaning "to **restrain**".
     - All at once she lost her **temper**.
+        - lose one's temper 发脾气/失去耐心/动怒
+        - all at once 突然地/一下子/冷不丁
     - His hot **temper** has landed him in trouble before.
-    - If you have a nasty **temper**, you might try <ins>**tempering** your **temper**</ins> by counting to ten...
-- aviation
+    - If you have a *nasty([ˈnæsti] adj. 令人讨厌的)* **temper**, you might try <ins>**tempering** your **temper**</ins>
+      by counting to ten...
+- aviation [ˌeɪviˈeɪʃn]
     - n. 航空（学）
 - customize
     - vt. 定做
 - bravery
     - n. 勇敢的行为（或态度）
-- spammer
+- spammer ['spæmə(r)]
     - n. 垃圾邮件制造者
-    - spam n. 垃圾邮件
-- mournful
+    - spam [spæm] n. 垃圾邮件
+- mournful [ˈmɔrnfl]
     - adj. 悲哀的
-    - mourning n. 哀悼
+    - mourning [ˈmɔːrnɪŋ] n. 哀悼
 
 ## 050
 
-- disperse
+- disperse [dɪˈspɜːrs]
     - v. 分散
 - string
     - n. 一系列
@@ -60,59 +65,59 @@
     - n. 最大努力
     - adj. 最大的
     - do one's utmost to do sth. 竭尽全力
-- creep
+- creep [kriːp]
     - vi. 不知不觉产生
     - Back I go to the hotel and **creep** up to my room. 蹑手蹑脚进入房间
     - Insecurity might <ins>**creep** in</ins>. 不安全感可能会悄然而生.
-    - What was once exciting and new becomes old-hat; regret creeps in. 曾经令人兴奋的新奇事物成了明日黄花；悔意悄悄袭来.
+    - What was once exciting and new becomes old-hat; regret **creeps** in. 曾经令人兴奋的新奇事物成了明日黄花；悔意悄悄袭来.
 - consistency
     - n. 一致性
 - scholarship
     - n. 学术研究；奖学金
     - I won the **scholarship** three years in a row.
-    - scholastic adj. 学术的
-- graveyard
+    - scholastic [skəˈlæstɪk] adj. 学术的
+- graveyard [ˈgreɪvjɑrd]
     - n. 墓地
-- assault
+- assault [əˈsɔːlt]
     - vt. 袭击
 
 ## 051
 
-- league
+- league [liːɡ]
     - n. 联盟
 - magically
     - adv. 魔法地
-- hesitate
+- hesitate [ˈhezɪteɪt]
     - vi. 犹豫
     - hesitancy n. 犹豫
     - hesitant adj. 犹豫的
 - unexpectedly
     - adv. 意外地
-- continual
+- continual [kənˈtɪnjuəl]
     - adj. 不间断的
     - **Continual** learning is the key to **continual** living.
-    - continuity n. 持续性
-    - continuance n. 继续
+    - continuity [ˌkɑːntɪˈnuːəti] n. 持续性
+    - continuance [kənˈtɪnjuəns] n. 继续
 - longstanding
     - adj. 长期的
 
 ## 052
 
-- newsworthy
+- newsworthy [ˈnuzwɜrði]
     - adj. 有新闻价值的
     - The number of deaths makes the story **newsworthy**.
 - socialization
     - n. 社会化
-- comparative
+- comparative [kəmˈpærətɪv]
     - adj. 比较的
 - attendant
     - adj. 随之而来的
-- monumental
+- monumental [ˌmɑːnjuˈmentl]
     - adj. 非常大（或好、坏、蠢等）的；纪念的
     - We have a **monumental** task ahead of us.
-- swallow
+- swallow [ˈswɑːloʊ]
     - v. 吞咽
-- alarmingly
+- alarmingly [əˈlɑːrmɪŋli]
     - adv. 令人惊恐地
 - needy
     - adj. 贫困的
@@ -121,7 +126,7 @@
     - **Reskilling** is something that sounds like a *buzzword(n. 流行话；时髦用语)* but is actually a requirement if we
       plan to have a future in which a lot of would-be workers do not get left behind.
     - upskill vt. 通过培训等方式学习其它的工作技能
-- groan
+- groan [ɡroʊn]
     - vi. 抱怨
     - groan about
 
@@ -129,24 +134,26 @@
 
 - desperation
     - n. 绝望；不顾一切
-    - She acted a courage born out of **desperation**.
+    - She acted with a courage (that was) born out of **desperation**.
+        - be born out of + noun 由...产生/源于...
 - interrelation
     - n. 相互关系
-- accommodate
+- accommodate [əˈkɑːmədeɪt]
     - v. 适应
     - vt. （房屋等）容纳
     - The roads are built to **accommodate** gradual temperature changes.
-- whip
+        - gradual [ˈɡrædʒuəl] adj. 逐渐的
+- whip [wɪp]
     - n. 鞭子
 - biotechnology
     - n. 生物技术
-- destruction
+- destruction [dɪˈstrʌkʃn]
     - n. 摧毁
 - forester
     - n. 林务员
 - storehouse
     - n. 宝库
-- automotive
+- automotive [ˌɔtəˈmoʊtɪv]
     - adj. 汽车的
 - broaden
     - v. 增长
@@ -154,16 +161,14 @@
 
 ## 054
 
-- furnish
+- furnish [ˈfɜːrnɪʃ]
     - vt. 提供
-- disputable
+- disputable [dɪˈspjutəbəl]
     - adj. 可商榷的
     - dispute [dɪˈspjuːt] 😔
         - vt. 对...表示异议（或怀疑）
         - n. 争端；争论
-- irrational
-    - adj. 非理性的
-- ariborne
+- airborne [ˈerbɔːrn]
     - adj. （飞行器）在空中的
 - prohibition
     - n. 禁止
@@ -174,19 +179,19 @@
     - n. （尤指有历史或文化价值的）手工艺品
 - reclassify
     - vt. 重新分类
-- sugary
+- sugary [ˈʃʊɡəri]
     - adj. 含糖的
-- reckless
+- reckless [ˈrekləs]
     - adj. 不顾后果的
-- liability
-    - n. [pl.]债务
+- liability [ˌlaɪəˈbɪləti]
+    - n. (pl.)债务
 
 ## Words
 
 - spiritual [ˈspɪrɪtʃuəl]
     - adj. 精神上的; 宗教上的
     - n. 灵歌
-- disinterested
+- disinterested [dɪsˈɪntrəstɪd]
     - v. 使不再有利害关系
     - adj. 公正的; 无私的; 不感兴趣的; 不关心的
 - indifferent
