--- a/english/word/low-frequency/105-112.md
+++ b/english/word/low-frequency/105-112.md
@@ -17,13 +17,239 @@
 - C: Cause
 - R: Result
 
+## 105
+
+- preclude 😔
+    - vt.阻止
+    - preclude sb from doing sth.
+    - include 包含
+    - exclude 排外
+- ethically
+    - adv. 伦理地，道德地
+    - ethical crisis 伦理危机
+- suburban
+    - adj. 郊区的
+    - urban 城市的
+- conform
+    - vi. 遵守
+    - conform to/with 遵守
+    - conformity n. 随大流；遵守
+        - in conformity with 相一致
+- notify
+    - vt. 通知
+- aggregation
+    - n. 整合
+    - data aggregation 数据整合
+- mediate
+    - v. 调解
+- stance
+    - n. 立场
+    - take ... stance
+    - What is the newspaper's stance on the war?
+- unbearable
+    - adj. 无法忍受的
+    - bear v. 承受，忍受
+    - The waiting became almost unbearable.
+
+## 106
+
+- implementation
+    - n. 实践，实施
+    - implement v. 实施
+- punch
+    - vt. 打击； n. 重拳击打
+- unwittingly
+    - adv.不知情地
+- gateway
+    - n. 门
+- brutal
+    - adj. 残酷的
+- obstruct
+    - vt. 阻挠
+    - obstruct efforts to 阻碍做...
+- unanimous
+    - adj. 一致同意的
+    - in a rare unanimous ruling 在罕见的一致的裁决中
+        - verdict == ruling 裁决
+        - In a rare unanimous ruling，the US Supreme Court has **overturned** the <ins>corruption conviction (贪污定罪)</ins> of <ins>former (前者)</ins> Virginia governor，Robert McDonnell.
+    - anonymous(匿名) vs unanimous
+        - The vote was__
+        - You can remain__if you wish.
+- **accessibility**
+    - n. 可获得性
+    - access
+- propagate
+    - v. 传播
+        - spread
+    - propagation n. 传播
+
+## 107
+
+- forgery
+    - n. 伪造品
+    - fake
+- controversialist
+    - n. 好争论者
+- hyperactivity
+    - n. 极度活跃
+- prosperous
+    - adj. 繁荣的
+    - **prosperity**n. 繁荣
+- plaster
+    - n. 熟石灰
+- **orderly**
+    - adj. 整洁的
+    - == tidy
+- indication
+    - n. 迹象
+- **impairment** 😔
+    - n. (身体或智力方面的)缺陷，障碍
+- unauthorized
+    - adj. 未经许可（或批准的）
+- irritability
+    - n. 易怒
+
+## 108
+
+- reclaim
+    - vt. 回收；要回；开垦
+- sensor
+    - n. （探测光，热，压力等的）传感器，探测设备
+    - sense
+- proverb
+    - n. 谚语
+    - quote a proverb 引用一句谚语
+- pronouncement
+    - n. 声明
+- **remedy**
+    - vt. 改进；改正
+    - need to be remedied
+- dismissal
+    - n. 解雇
+    - pink slip 解雇通知单
+    - Now a pink slip,a bad diagnosis,or a disappearing spouse can <ins>reduce (沦落到)</ins> a family from solidly middle class to newly poor in a few months.
+- stagnation
+    - n. 停滞
+    - recession/depression/slow down
+- deepen
+    - v. （使）变深
+- abruptly
+    - adv. 突然地
+- imprison
+    - vt. 监禁
+
+## 109
+
+- stalk
+    - v. 偷偷接近
+- **remodel**
+    - vt. 改变...的形状（或结构）
+- mortal
+    - n. 平民百姓； adj. 终有一死的
+- intermittently
+    - adv. 间歇地
+- inhibit
+    - vt. 阻止，妨碍
+    - preclude
+    - curb
+    - dampen
+- sculpture
+    - n. 雕塑
+- faint
+    - adj. 轻微的
+- defendable
+    - adj. 可防御的
+    - defensible adj. （想法，行为等）合理的
+    - defense 捍卫，防守
+    - defendant n. 被告
+- renovate
+    - vt. 修复
+    - innovate 创新
+
+## 110
+
+- spiritual
+    - adj. 精神的
+- interim
+    - adj. 临时的
+- retention
+    - n. 保留
+- advocacy
+    - n. 游说（组织）；提倡
+    - advocate v. 游说，倡导
+- scrape
+    - v. v. 用程序从网上下载（数据）
+- humility
+    - n. 谦逊
+- newlywed
+    - .新婚夫妇
+    - wedding
+- shatter
+    - v. 使粉碎
+- temperament
+    - n. 脾气
+- representational
+    - adj. 具象派的
+    - representative n. 代表；众议院
+
+## 111
+
+- biomedical
+    - adj. 生物医学的
+- wholeheartedly
+    - adv. 全心全意地
+- diagnosis
+    - n. 诊断
+    - diagnostic adj. 诊断的
+- **deference**
+    - n. 尊敬
+    - absence of deference 缺乏尊重
+    - deferential adj. 恭敬的
+    - defer- 拿
+- racial
+    - adj. 种族的
+    - racial discrimination 种族歧视
+- overfish
+    - v. 过度捕捞
+- celebration
+    - n. 庆祝
+- constitutionality
+    - n. 符合宪法
+    - constitution n. 宪法
+    - unconstitutionality 违反宪法
+
 ## 112
 
+- assimilate
+    - v. 使同化；vt. 透彻理解
+    - assimilative adj. 同化的
+- rifle
+    - vt. 迅速翻找
+    - rifle through
+- saturate
+    - vt. 使充满
+- indefinite
+    - adj. 不确定的；无限期的
+    - == uncertain
+    - define v. 下定义，确定的，有限的
+- quotation
+    - n. 引文
+- publicise/-ize
+    - vt. 宣传
+- stall
+    - n. [pl.] （剧场的）正厅前座区
 - adverse
     - adj. 不利的
     - It is argued that the influence of transient investment on public companies can be **adverse**.
+- transformative
+    - adj. 有改革能力的
 
 ## Words
+
+- cozy
+    - == comfortable
+- propel
+    - 推进
 
 ## 词组
 
