feat: parse multi file
1. 007-012

--- a/english/word/low-frequency/007-012.md
+++ b/english/word/low-frequency/007-012.md
@@ -192,7 +192,7 @@
         - optimism n. 乐观主义
     - idealistic
         - adj. 理想主义的
-        - When you're **idealistic**, you <ins>dream of</ins> perfection, whether in yourself or other people.
+        - When you're **idealistic**, you dream of perfection, whether in yourself or other people.
             - dream of 向往、憧憬
 - input
     - vt. 把（数据等）输入计算机
