--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -175,7 +175,7 @@
     - entrance [ˈentrəns] n. 入口 v./n. 进入
     - enter vs entrance
         - enter 具体的进入
-        - entrance 抽象的进入，Case: 入学
+        - entrance 抽象的进入，e.g. 入学
 - male
     - adj. 男性的
     - male nurse([nɜːrs]) 男护士
