--- a/math/advanced-mathematics/basic-logic.tex
+++ b/math/advanced-mathematics/basic-logic.tex
@@ -73,8 +73,8 @@
             \item 全称命题和特称命题互为否定命题
             \item 全称命题否定命题: $\exists x,$使得$\overline{A}$成立
             \item 特称命题否定命题: $\forall x,$均有$\overline{A}$成立
-            \item Case: $\forall x \in \mathbb{R}$均有$x^2 \ge 0$成立。否定命题: $\exists x \in \mathbb{R},$使得$x^2 < 0$成立
-            \item Case: $\exists x \in \mathbb{R}$使得$x^2 \ge 0$。否定命题: $\forall x \in \mathbb{R},$均有$x^2 < 0$成立
+            \item \emph{e.g.} $\forall x \in \mathbb{R}$均有$x^2 \ge 0$成立。否定命题: $\exists x \in \mathbb{R},$使得$x^2 < 0$成立
+            \item \emph{e.g.} $\exists x \in \mathbb{R}$使得$x^2 \ge 0$。否定命题: $\forall x \in \mathbb{R},$均有$x^2 < 0$成立
         \end{enumerate}
         \item 蕴称命题: $A \Rightarrow B$(若$A$成立，则$B$成立)
         \begin{enumerate}
