--- a/math/advanced-mathematics/learning-guide.tex
+++ b/math/advanced-mathematics/learning-guide.tex
@@ -43,7 +43,7 @@
         \item 全称命题: $\forall x, A(x) \text{成立} \overset{\text{否定}}{\Rightarrow} \exists \; x, \neg{A(x)}\text{成立}$
         \begin{enumerate}
             \item “对于所有 $x$，$A(x)$ 成立” 的否定是“存在至少一个$x$，使得$A(x)$不成立”
-            \item Case:
+            \item \emph{e.g.}
             \begin{enumerate}
                 \item 命题：所有学生都及格
                 \item 否定：存在至少一个学生没及格
@@ -53,7 +53,7 @@
         \item 特称命题: $\exists x, A(x) \text{成立} \overset{\text{否定}}{\Rightarrow} \forall \; x, \neg{A(x)}\text{成立}$
         \begin{enumerate}
             \item “存在$x$使 $A(x)$ 成立” 的否定是“对所有$x$，$A(x)$都不成立”
-            \item Case:
+            \item \emph{e.g.}
             \begin{enumerate}
                 \item 命题：有学生没迟到
                 \item 否定：每个学生都迟到
@@ -63,7 +63,7 @@
         \item 蕴式命题: $A \rightarrow B \text{(若A，则B)} \overset{\text{否定}}{\Rightarrow} A\text{成立且} \neg{B}\text{成立}$
         \begin{enumerate}
             \item “如果$A$，则$B$” 的否定是“发生了$A$，但$B$没发生”
-            \item Case:
+            \item \emph{e.g.}
             \begin{enumerate}
                 \item 命题：如果下雨，我就带伞
                 \item 否定：下雨了，但我没带伞
@@ -78,7 +78,7 @@
                 \item 对每个全称量词 $\forall$ 取反 \rightarrow \text{变成特称} \; $\exists$
                 \item 对每个特称量词 $\exists$ 取反 \rightarrow \text{变成全称} \; $\forall$
                 \item 否定公式在逻辑上包裹命题内容
-                \item Case:
+                \item \emph{e.g.}
                 \begin{enumerate}
                     \item 命题：对每个学生，都存在一道题他能做对
                     \[
