--- a/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
@@ -228,8 +228,13 @@
             \item 如果函数是有分母，则通分，将加减法变形为乘除法，以便使用其他计算工具（$\displaystyle\frac{0}{0}, \frac{\infty}{\infty}$）
             \item 如果函数中没有分母，则可以通过提取公因式或者做倒代换（创造分母再通分），出现分母后，再利用通分等恒等变形的方法，将加减法变形为乘除法
         \end{itemize}
-        \item $\infty^0, 0^0$: $\lim u^v = \lim\{[1 + (u - 1)]^\displaystyle\frac{1}{u-1}^{(u-1)v} = e^{\lim v\lim u}$
+        \item $\infty^0, 0^0$: $\lim u^v = e^{\lim v\lim u}$
         \item $1^\infty$: $\lim u^v = e^{\lim v(u - 1)}$
+        \begin{analysisbox}[Example]
+            \[
+                \lim u^v = \lim \{[1 + (u - 1)]^{\frac{1}{u-1}}\}^{(u-1)v} = e^{\lim(u - 1)v}
+            \]
+        \end{analysisbox}
         \item 泰勒公式
     \end{enumerate}
 
@@ -344,6 +349,6 @@
             =
             \lim_{x\to a} \frac{f'(x)}{F'(x)},
         \]
-        \textbf{右极限存在，则左极限存在；但左极限存在，并不意味着右极限一定存在。} Case: $\lim\limits_{x\to 0} \displaystyle\frac{x^2 \sin \displaystyle\frac{1}{x}}{x}$
+        \textbf{右极限存在，则左极限存在；但左极限存在，并不意味着右极限一定存在。} \emph{e.g.} $\lim\limits_{x\to 0} \displaystyle\frac{x^2 \sin \displaystyle\frac{1}{x}}{x}$
     \end{enumerate}
 \end{document}
