--- a/math/linear_algebra/linear-system.tex
+++ b/math/linear_algebra/linear-system.tex
@@ -336,7 +336,7 @@
                     \end{tikzpicture}
                 \]
             \end{enumerate}
-            \item Case:
+            \item \emph{e.g.}
             \[
                 \left[
                     \begin{array}{ccc|c}
