--- a/math/linear_algebra/vector.tex
+++ b/math/linear_algebra/vector.tex
@@ -243,7 +243,7 @@
             \item 若有参数，分情况讨论
             \item 主元就是极大线性无关组
             \item 线性表示为对应向量的系数
-            \begin{analysisbox}[Case:]
+            \begin{analysisbox}[Example]
                 \[
                     \begin{bmatrix}
                         1 & 0 & -1 & 2  \\
